cmake_minimum_required(VERSION 3.8)
project(MIMUW-FORK C)

set(CMAKE_CXX_STANDARD "17")
set(CMAKE_C_STANDARD "11")
set(CMAKE_C_FLAGS "-g -Wall -Wextra -Wno-sign-compare")

add_library(err ../err.c)
add_library(Utils ../Utils.c)
add_library(HashMap ../HashMap.c)
add_library(Tree ../Tree.c)
add_library(test_utils test_utils.c)
add_library(seq_ok1 seq_ok1.c)
add_library(seq_ok2 seq_ok2.c)
add_library(con_ok1 con_ok1.c)
add_library(path_ok1 path_ok1.c)
add_executable(main main.c)
target_link_libraries(main con_ok1 seq_ok2 seq_ok1 path_ok1 test_utils Tree HashMap Utils err pthread)

install(TARGETS DESTINATION .)
