cmake_minimum_required(VERSION 3.8)
project(MIMUW-FORK C)

set(CMAKE_CXX_STANDARD "17")
set(CMAKE_C_STANDARD "11")
# set(CMAKE_C_FLAGS "-fsanitize=thread -g -Wall -Wextra -Wno-sign-compare")
set(CMAKE_C_FLAGS "-g -Wall -Wextra -Wno-sign-compare")

add_library(err ../err.c)
add_library(Utils ../Utils.c)
add_library(HashMap ../HashMap.c)
add_library(Tree ../Tree.c)
add_library(Path_Utils ../path_utils.c)
add_library(test_utils test_utils.c)
add_library(con_ok2 con_ok2.c)
add_library(con_ok3 con_ok3.c)
add_library(con_ok4 con_ok4.c)
add_library(con_ok5 con_ok5.c)
add_library(err1 err1.c)
add_library(err2 err2.c)
add_library(path_ok1 path_ok1.c)
add_library(seq_ok3 seq_ok3.c)
add_executable(main main.c)
target_link_libraries(main err2 err1 con_ok5 con_ok4 con_ok3 con_ok2 seq_ok3 path_ok1 test_utils Tree Path_Utils HashMap Utils err pthread)

install(TARGETS DESTINATION .)
